[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarzynski"
version = "0.0.0"
description = ""
authors = [{name = "Mario Geiger", email = "geiger.mario@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jax",
]

[project.urls]
Homepage = "https://github.com/yourusername/jarzynski"
Repository = "https://github.com/yourusername/jarzynski"
Issues = "https://github.com/yourusername/jarzynski/issues"

[tool.hatch.build.targets.wheel]
packages = ["jarzynski"]
